[package]
name = "conv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.2", features = ["derive"] }
erased-serde = "0.3.18"
serde = { version = "1.0.136", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
